========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2019-10-20

 - More changes to unittest while porting to Bazel build (for C++ support).


2019-10-11

 - Added __main__ block to all tests because ongoing port to Bazel build
   requires it.


2019-10-10

 - Moved test data for b.utils.file_type for Bazel support. It otherwise assumes
   file_type.py is a package.


2019-08-21

 - Fixed bug in split_expenses plugin.


2019-06-01

  - Upgraded Bison to 3.4 (built from source). Silenced warnings.


2019-05-01

 - Fixed #389: Patch for b.p.forecast improvements.

 - Added rolled back change to default value of flag used when using the 'txn'
   syntax. See issue #295 for a discussion.


2019-03-16

  - Had a very quick shot at implementing trade tracking, added the list of
    matches positions from the booking methods. This doesn't work yet, I need to
    make changes to b.c.Inventory in order to make this work. Partial
    changelist.


2019-03-03

  - Fixed #378: Rendering metadata with null values wasn't properly implemented.
    In the process, I explicit parsing of None values by allowing "NULL".

  - Fixed #309: Catch PermissionError to work around
    https://bugs.python.org/issue25481.


2019-02-27

  - Implemented a quick prototype of the current trading accounts method of
    Peter Selinger in 'beancount.plugins.currency_accounts'. A few warts remain:

    * FIXME: We need to handle these important cases (they're not frivolous,
      this is a prototype), probably by inserting some exceptions with
      collaborating code in the booking (e.g. insert some metadata that
      disables price conversions on those postings).

    * FIXME(2): Ouch! Some of the residual seeps through here, where there
      are more than a single currency block. This needs fixing too. You can
      easily mitigate some of this to some extent, by excluding transactions